# bender-lora

./: .gitignore  AGENTS.md  BEADS_USAGE.md  CLAUDE_INIT.md  LICENSE  PROJECT_INFRASTRUCTURE.md  SERA_SYSTEM_DESIGN.md  TICKET_DECOMPOSITION_GUIDE.md  bootstrap_env.sh  config.yaml  pyproject.toml
src/sera_lab/: __init__.py  __main__.py  cli.py  errors.py  normalize.py  records.py  rules.py
src/sera_lab/core/: bootstrap_check.py
tests/: test_check.py
